--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "isomorphic-dompurify": "^2.22.0",
     "jsdom": "^26.0.0",
     "next": "canary",
-    "next-mdx-remote": "^4.4.1",
+    "next-mdx-remote": "^5.0.0",
     "postcss": "^8.4.35",
     "prisma": "^6.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
+    "remark-gfm": "^4.0.1",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
